# oop

./: .gitignore  Makefile  README.md  _startup.c  app.c  clock.h  common.h  delay.c  delay.h  freedom.h  gpio.c  gpio.h  led.c  led.h  log.c  log.h  pins.h  reg.c  reg.h  reg_mock.c  ringbuffer.c  ringbuffer.h  system_MKL25Z4_mock.c  test.c  uart.c  uart.h
armgcc/: CMakeCache.txt  CMakeLists.txt  Makefile  build_all.sh  build_debug.sh  build_release.sh  cmake_install.cmake
armgcc/debug/: parsed_uart.elf  program_target.sh
armgcc/release/: parsed_uart.elf
tests/: build_tests.sh  tests_buffer.c  tests_delay.c  tests_uart  tests_uart.c
